# UniProjectChess

./: .gitignore  CMakeLists.txt  board.c  board.h  build.bat  build.sh  defaults.c  defaults.h  defs.h  game  main.c  move.c  move.h  moveset.c  piece.c  piece.h  spawn.c  spawn.h  team.c  term_2d.c  test.c  test.h  test.sh
abstract/: debug.h  defs.c  defs.h  exception.c  exception.h  version.c  version.h
data_ptr/: settings.ini
engine/: board.c  board.h  gamepiece.c  gamepiece.h  gamestate.c  gamestate.h  moveentry.c  moveentry.h  path.c  path.h  tile.c  tile.h  validation.c  validation.h
enum/: key.h
model/: defs.h  move.c  move.h  moveset.c  moveset.h  piece.c  piece.h  rect.c  rect.h  scenario.c  scenario.h  spawn.c  spawn.h  specialcheck.c  specialcheck.h  specialdata.h  specialmove.c  specialmove.h  team.c  team.h  teamdirection.h  vector.c  vector.h  vector8.c  vector8.h
model/move/: move.c  move.h  moveset.h  specialdata.c  specialdata.h  specialmove.c  specialmove.h
scenario/: battlefield.chess  checkers.chess  classic.chess  highway.chess  knights.chess  lol.chess  modern defense.chess  original.chess  original_old.chess  revolution.chess  test.chess
scenario_old/: knights.chess
set/: original.chess
settings/: log.c  log.h  settings.c  settings.h
ui/: board.c  board.h  con_lib.c  con_lib.h  notation.c  notation.h  render.c  render.h  shape.c  shape.h
ui/component/: dialogbox.c  dialogbox.h  menuitem.c  menuitem.h  menuselector.c  menuselector.h
ui/generic/: rect.c  rect.h  shape.c  shape.h  text.c  text.h
ui/view/: endmenu.c  endmenu.h  gamemenu.c  gamemenu.h  mainmenu.c  (+5 more)
utils/: encoding.c  encoding.h  files.c  files.h
(+6 files in other folders)
